force-app/main/default/objects/PDFTron_Template_Mapping__mdt/PDFTron_Template_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PDFTron Template Mapping</label>
    <pluralLabel>PDFTron Template Mappings</pluralLabel>
</CustomObject>