force-app/main/default/objects/PDFTron_Template_Mapping__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>