force-app/main/default/objects/PDFTron_Template_Mapping__mdt/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>